crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__harvest__harvest_search_no_model.snap
---
source: crates/engram-cli/tests/cli/snapshot/harvest.rs
expression: "f.run(&[\"harvest\", \"search\", \"daemon idle timeout\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] harvest search daemon idle timeout
exit: 1
--- stdout ---
--- stderr ---
Error: conversations cannot be searched: [EMBEDDING_UNAVAILABLE]
